<resources>
    <string name="app_name">天呐</string>
    <string name="tab_grab">抢</string>
    <string name="tab_rebate">返</string>
    <string name="tab_show">晒</string>
    <string name="tab_my">我</string>
    <string name="tab_all">全部</string>
    <string name="tab_already">已揭晓</string>
    <string name="tab_checkAll">所有验证码</string>
    <string name="tab_unChecked">未验证</string>
    <string name="tab_checked">已验证</string>
    <string name="title_win_information">中奖信息</string>
    <string name="title_commodity_information">商品详情</string>
    <string name="title_edit_personal_information">编辑个人资料</string>
    <string name="title_completeInformation">完善资料</string>
    <string name="title_rebate">返现</string>
    <string name="title_signed_explain">签到声明</string>
    <string name="title_rebate_explain">返现声明</string>
    <string name="title_personal_center">个人中心</string>
    <string name="title_snatch_record">夺宝记录</string>
    <string name="title_winning_record">中奖记录</string>
    <string name="title_winner_list">活动中奖</string>
    <string name="title_show_and_share">晒单分享</string>
    <string name="title_show_now">晒单</string>
    <string name="title_bucket">相册</string>
    <string name="title_my_withdraw_deposit">我的提现</string>
    <string name="title_my_rebate_records">我的返现</string>
    <string name="title_withdraw_deposit">立即提现</string>
    <string name="title_withdraw_deposit_help">提现帮助</string>
    <string name="title_verify_phone_num">验证手机号</string>
    <string name="title_withdraw_deposit_details">提现详情</string>
    <string name="title_pub_messages">公共消息</string>
    <string name="title_in_station_messages">站内信息</string>
    <string name="title_my_show">我的晒单</string>
    <string name="title_setting">"设置"</string>
    <string name="title_userInfo">"个人资料"</string>
    <string name="title_nickName">"修改昵称"</string>
    <string name="title_realName">"修改姓名"</string>
    <string name="title_accountName">"修改账户名"</string>
    <string name="title_changePhone">"换绑手机"</string>
    <string name="title_changeIdCardInfo">"修改身份证信息"</string>
    <string name="title_idCardInfo">"身份证信息"</string>
    <string name="title_bankCard">"银行卡"</string>
    <string name="title_changeBankCardNum">"修改银行卡号"</string>
    <string name="title_changeBankCardInfo">"修改银行卡信息"</string>
    <string name="title_safe">"安全校验"</string>
    <string name="title_resetPassWord">"重置密码"</string>
    <string name="title_selectCity">"选择城市"</string>
    <string name="title_selectAge">"选择您的年龄"</string>
    <string name="title_selectGender">"选择性别"</string>
    <string name="title_selectActive">"选择活动"</string>
    <string name="title_age">"年龄"</string>
    <string name="title_userHelp">用户帮助</string>
    <string name="title_about">关于天呐</string>
    <string name="title_feedBack">新反馈</string>
    <string name="title_protocol">天呐抢购协议</string>
    <string name="title_address">修改地址</string>
    <string name="title_updateMember">会员升级</string>
    <string name="title_openBank">开户银行</string>
    <string name="title_contactUs">联系我们</string>
    <string name="title_shopCheck">商家验证</string>
    <string name="title_service">抢服务</string>
    <string name="title_commodity">抢商品</string>
    <string name="label_winner">获奖者</string>
    <string name="label_views">浏览量</string>
    <string name="label_grab_cancelTip">取消提醒</string>
    <string name="label_grab_onclick">猛戳开抢......</string>
    <string name="label_grab_start_date">开抢时间：</string>
    <string name="label_countDown">倒计时：</string>
    <string name="label_grab_countDown">倒计时：</string>
    <string name="label_grab_value">价值　　　</string>
    <string name="label_signInSuccess">报名成功</string>
    <string name="label_timeBeforeGrab">请选择开抢前提醒时间</string>
    <string name="label_clickToCompleteInfo">点击完善你的资料后兑奖</string>
    <string name="label_clickToReturn1">点击返回</string>
    <string name="label_clickToReturn2">谢谢参与,点击返回</string>
    <string name="label_clickToWinningRecords">平台将即时与你联系\n点击查看中奖记录</string>
    <string name="label_merchantInfo">商家信息</string>
    <string name="label_contactMerchant">联系商家</string>
    <string name="label_realName">真实姓名</string>
    <string name="label_idCardNum">身份证号</string>
    <string name="label_idCardPic">身份证件</string>
    <string name="label_celPhone">手机号码</string>
    <string name="label_bankCardNum">银行卡号</string>
    <string name="label_address">有效地址</string>
    <string name="label_avatar">头像</string>
    <string name="label_nickName">我的昵称</string>
    <string name="label_gender">性别</string>
    <string name="label_age">年龄</string>
    <string name="label_bankCardAccount">"银行账号　"</string>
    <string name="label_bankAccountName">"账  户  名　"</string>
    <string name="label_bankName">"开户银行　"</string>
    <string name="label_address1">地址</string>
    <string name="label_changePassWord">修改密码</string>
    <string name="label_gender_man">男</string>
    <string name="label_gender_woman">女</string>
    <string name="label_yes">是</string>
    <string name="label_no">否</string>
    <string name="label_copy">复制</string>
    <string name="label_save">保存到本地</string>
    <string name="label_code">请输入开抢验证码</string>
    <string name="label_change">看不清楚,换一张</string>
    <string name="label_uploadID">上传身份证信息(身份证正反照)</string>
    <string name="label_click">(点击上方+上传)</string>
    <string name="label_ensure">(请保证该账号能正常使用,因该账号原因导致款项不能准时到达,天呐平台不予承担任何责任)</string>
    <string name="label_zhu">　　　　注:</string>
    <string name="label_mark">"　　注:完善信息后请于3日内前往天呐运营中心办理相关手续(请获奖本人带上身份证明),逾期天呐平台将视为用户主动放弃获奖资格,平台不予承担任何责任。"</string>
    <string name="label_name">"姓　名　"</string>
    <string name="label_sex">"性　别　"</string>
    <string name="label_memberAge">"年　龄　"</string>
    <string name="label_memberPhone">"电　话　"</string>
    <string name="label_memberAddress">"地　址　"</string>
    <string name="label_memberIdNum">"身份证　"</string>
    <string name="label_education">"学　历　"</string>
    <string name="label_career">"职　业　"</string>
    <string name="label_income">"月收入　"</string>
    <string name="label_1">近期是否有购置房屋意向</string>
    <string name="label_2">如购置房屋选择付款方式</string>
    <string name="label_3">如购置房屋选择意愿</string>
    <string name="label_4">如购置房屋选择面积</string>
    <string name="label_5">如购置房屋选择价位</string>
    <string name="label_6">如购置房屋选择区域</string>
    <string name="label_7">如购置房屋您最为看重的问题</string>
    <string name="label_8">用户需绑定平台指定银行账户，已有账户或新申请账户均可使用</string>
    <string name="label_9">请保证该帐号能正常使用，因该帐号原因导致款项不能准时到达，天呐平台不予承担任何责任</string>
    <string name="label_detail1">请勿盲目参与抢单，抢单成功需进行线下购买行为</string>
    <string name="label_detail2">用户抢单成功即获得购买该商品后，享受现金派送的资格</string>
    <string name="label_detail3">用户抢单成功须在3日内联系平台办理手续，逾期将视为主动放弃</string>
    <string name="label_detail4">用户抢单成功后，若本人无力购买，可向平台申请转让获奖资格，如取得平台认可后不得再次申请</string>
    <string name="label_detail5">商品购买行为发生后，用户(受让用户)方可获取现金派送资格</string>
    <string name="label_detail6">资格确认后，平台将根据用户获奖总额分为66期进行派送，该款项由银行监管执行</string>
    <string name="label_detail7">现金派送将在每月10日自动划入用户平台帐号钱包，用户钱包内自主提现</string>
    <string name="label_detail8">用户提现需支付10%的手续费，转账时自动扣除</string>
    <string name="label_detail9">最终解释权归天呐平台所有</string>
    <string name="label_detail10">用户提现需支付10%的手续费，转账时自动扣除</string>
    <string name="label_tipTitle">天呐君温馨提示:</string>
    <string name="label_tipContent">"　　由于大宗商品抢单活动中，涉及大额现金优惠，请如实填写下列个人信息，全部完善后才能参与平台大宗商品抢单活动。"</string>
    <string name="label_tipContent2">"　　本次活动开抢所涉及的商品为平台免费赠予抢单成功的用户，并根据用户地址及时配送（县份用户将以物流送达），请如实填写下列信息。平台不会以任何方式向用户收取任何费用。"</string>
    <string name="label_snatch">夺宝记录</string>
    <string name="label_winning">中奖记录</string>
    <string name="label_my_withdraw_deposit">提现记录</string>
    <string name="label_withdraw_deposit_now">立即提现</string>
    <string name="label_inner_information">站内信息</string>
    <string name="label_my_show">我的晒单</string>
    <string name="label_contactUs">联系我们</string>
    <string name="label_merchant">商家专区</string>
    <string name="label_totalAmount">总金额池</string>
    <string name="label_supervision">本资金池有中国工商银行全程监督</string>
    <string name="label_unRebateSum">个人未返金额(元)</string>
    <string name="label_rebateSum">个人已返金额(元)</string>
    <string name="label_unSign">签到\n即返</string>
    <string name="label_signed">已返</string>
    <string name="label_rules">规则说明</string>
    <string name="label_signRule">签到说明</string>
    <string name="label_rebateRule">返现声明</string>
    <string name="label_rebateRecords">返现记录</string>
    <string name="label_withdraw_deposit">我要提现</string>
    <string name="label_rebate1">平台专用账户(元)</string>
    <string name="label_rebate2">本账户由银行全程监管执行</string>
    <string name="label_rebate3">天呐君温馨提示:积德行善攒人品</string>
    <string name="label_year">"年"</string>
    <string name="label_month">"月"</string>
    <string name="label_winning_dateTime">"　　获奖时间 :"</string>
    <string name="label_winning_endTime">领取截止日期 :</string>
    <string name="label_winning_address">"领取地点 : "</string>
    <string name="label_winning_requirement">"领取要求 : "</string>
    <string name="label_account_balance">"账户余额"</string>
    <string name="label_help">"提现帮助"</string>
    <string name="label_submitted">"提现申请已提交"</string>
    <string name="label_card">"存储卡"</string>
    <string name="label_money">"提现金额"</string>
    <string name="label_verify_phone_num">本次操作需要短信确认,验证码已发至手机:%1$s.请按提示操作</string>
    <string name="label_user_info">"个人资料"</string>
    <string name="label_user_help">"用户帮助"</string>
    <string name="label_about">"关于天呐"</string>
    <string name="label_share_soft">"软件分享"</string>
    <string name="label_feed_back">"意见反馈"</string>
    <string name="label_guide_page">"引导页"</string>
    <string name="label_check_update">"检查更新"</string>
    <string name="label_change_nickName">"1、此昵称非登陆会员名，仅在社区等场景显示"</string>
    <string name="label_sent">"验证码已发送至当前手机号:"</string>
    <string name="label_question">"无法收到验证码?"</string>
    <string name="label_newPhoneNum">"请输入您需要绑定的新手机号码"</string>
    <string name="label_newCode">"请输入%1$s收到的短信验证码"</string>
    <string name="label_input_idCardNum">"请输入有效身份证号"</string>
    <string name="label_bankName11">"中国工商银行"</string>
    <string name="label_depositCard">"储蓄卡"</string>
    <string name="label_bindingBankCard">"请绑定持卡人本人的银行卡"</string>
    <string name="label_cardHolder">"持卡人"</string>
    <string name="label_cardNum">"卡号　"</string>
    <string name="label_selectBankCardType">"请选择银行卡类型"</string>
    <string name="label_bankCardType">"卡类型　"</string>
    <string name="label_newPassWord">"设置新密码"</string>
    <string name="label_confirmPassWord">"确认密码　"</string>
    <string name="label_rememberPassWord">"记住登陆密码"</string>
    <string name="label_register">立即注册</string>
    <string name="label_forgetPassWord">忘记密码?</string>
    <string name="label_agree">请阅读同意后注册</string>
    <string name="label_protocol">《天呐用户协议》</string>
    <string name="label_history">历史</string>
    <string name="label_hot">热门</string>
    <string name="label_all">全部</string>
    <string name="intent_title">title</string>
    <string name="intent_parent">parent</string>
    <string name="intent_phone">phone</string>
    <string name="intent_bankCard">bankCard</string>
    <string name="intent_forgetPassWord">forgetPassWord</string>
    <string name="intent_changePassWord">changePassWord</string>
    <string name="intent_age">age</string>
    <string name="intent_gender">gender</string>
    <string name="intent_activeName">activeName</string>
    <string name="intent_activeId">activeId</string>
    <string name="hint_realName">请填写你的真实姓名</string>
    <string name="hint_idCardNum">请填写本人有效证件号</string>
    <string name="hint_bankCardNum">请填写本人储蓄卡号</string>
    <string name="hint_address">请填写本人收货地址</string>
    <string name="hint_input_code">"请输入验证码"</string>
    <string name="hint_select_bankCard">"请选择银行卡"</string>
    <string name="hint_input_bank_phoneNum">"请输入银行预留手机号"</string>
    <string name="btn_completed">完成</string>
    <string name="btn_get_code">获取验证码</string>
    <string name="btn_next">下一步</string>
    <string name="btn_get_code_again">重获验证码</string>
</resources>