<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    android:orientation="vertical">

    <include layout="@layout/pub_layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_input_idCardNum"
            android:textColor="@color/themeGray"
            android:textSize="@dimen/sp_20" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_8"
                android:text="@string/label_realName"
                android:textSize="@dimen/sp_20" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_realName"
                android:paddingBottom="@dimen/dp_8"
                android:paddingLeft="@dimen/dp_16"
                android:paddingTop="@dimen/dp_8"
                android:textSize="@dimen/sp_20" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_8"
                android:text="@string/label_idCardNum"
                android:textSize="@dimen/sp_20" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:digits="0123456789xyzXYZ"
                android:hint="@string/hint_idCardNum"
                android:paddingBottom="@dimen/dp_8"
                android:paddingLeft="@dimen/dp_16"
                android:paddingTop="@dimen/dp_8"
                android:textSize="@dimen/sp_20" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10">

        <Button
            style="@style/myButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toNext"
            android:text="@string/btn_next" />
    </LinearLayout>
</LinearLayout>