<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    android:orientation="vertical">

    <include layout="@layout/pub_layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <TextView
            android:id="@+id/txt_remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_20"
            android:text="@string/label_verify_phone_num"
            android:textColor="@color/themeGray"
            android:textSize="@dimen/sp_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_20">

            <EditText
                android:id="@+id/edt_code"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/hint_input_code"
                android:inputType="number"
                android:padding="10dp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_getCode"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/selector_get_code_button"
                android:gravity="center"
                android:onClick="toGetCode"
                android:text="@string/btn_get_code"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            style="@style/myButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toNext"
            android:text="@string/btn_next" />
    </LinearLayout>
</LinearLayout>