<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    android:orientation="vertical">

    <include layout="@layout/pub_layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp_30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sent"
            android:textColor="@color/themeGray"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_10" />


        <TextView
            android:id="@+id/txt_verify_phoneNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="14725852341"
            android:textColor="@color/themeGray"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <EditText
            android:id="@+id/edt_verify_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/hint_input_code"
            android:paddingBottom="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_16"
            android:paddingTop="@dimen/dp_8" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/themeGray"
            android:padding="@dimen/dp_8" />

        <TextView
            android:id="@+id/txt_verify_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center"
            android:onClick="toGetCode"
            android:padding="@dimen/dp_8"
            android:text="@string/btn_get_code_again"
            android:textColor="@color/themeRed"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_question"
            android:textColor="@color/themeGray"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10">

        <Button
            style="@style/myButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toNext"
            android:text="@string/btn_next" />
    </LinearLayout>
</LinearLayout>