<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    android:orientation="vertical">

    <include layout="@layout/pub_layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/txt_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_newCode"
            android:textColor="@color/themeGray"
            android:textSize="@dimen/sp_20" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/edt_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/hint_input_code"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/themeGray"
            android:padding="8dp" />

        <TextView
            android:id="@+id/txt_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center"
            android:onClick="toGetCode"
            android:padding="8dp"
            android:text="@string/btn_get_code_again"
            android:textColor="@color/themeRed"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            style="@style/myButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toFinish"
            android:text="@string/btn_completed" />
    </LinearLayout>
</LinearLayout>